Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-27728

[REG 7.0.2 -> 8.0] Can't Step Through JavaScript Code

XMLWordPrintable

    • c1c255059e (qt-creator/qt-creator/8.0) c1c255059e (qt-creator/qt-creator/master) c1c255059e (qt-creator/tqtc-qt-creator/8.0)

      1. Open the Samegame demo in Qt Creator.
        It's in Examples\Qt-<version>\demos\samegame\samegame.qmlproject of an installation from the official online installer.
      2. Set a breakpoint in the first line of the function startNewGame().
      3. Start debugging.
        Don't use Qt 6.3.1 or you'll run into QTBUG-104379/QTBUG-104400
      4. In the demo, click "1 Player".
        The breakpoint is being hit.
      5. Press F10 to step forward.
        The demo continues without stopping at the next line.

      In Creator 7.0.2 this works correctly.

        1. left.log
          1 kB
        2. right.log
          87 kB
        For Gerrit Dashboard: QTCREATORBUG-27728
        # Subject Branch Project Status CR V

            hjk hjk
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes