Debugger: Fix handling of stepping while debugging QML/JS

Amends 3341fa827f9fee6812b15bcb8eefb41211358958.

Fixes: QTCREATORBUG-27728
Change-Id: I96398d3ebaa33b10ec90cce4df9e9af809cd29a9
Reviewed-by: hjk <hjk@qt.io>